# rust-kernel-study

./: .gitignore  01_kernel-build.sh  02_busybox-build.sh  03_run-qemu-vm.sh  Cargo.toml
kernel_module/hello_world/: hello_world.c
kernel_module/rust/: Makefile  lib.rs  module_param_c.c  rust-project.json  rust_printk.rs
kernel_module/simple_random/: Makefile  build_read_random_char.sh  read_random_char.c  simple_random.c
src/: autocxx.rs  dbus_client.rs  dbus_server.rs  input.h  ioctl.rs  lib.rs  process.rs  sharedmem_reader.rs
warmup/: Cargo.toml  Makefile  build.rs
warmup/c_src/: hello.c  hello.h
warmup/src/: bindgen.rs  lib.rs  mmap.rs  sharedmem_writer.rs  signal_hook.rs
