[package]
name = "warmup"
version = "0.1.0"
edition = "2024"
description = "Warmup to various Rust FFI and IPC techniques"

[lib]
name = "rk_lib"
path = "src/lib.rs"

[[bin]]
name = "bindgen"
path = "src/bindgen.rs"

[[bin]]
name = "autocxx"
path = "src/autocxx.rs"

[[bin]]
name = "sharedmem_writer"
path = "src/sharedmem_writer.rs"

[[bin]]
name = "sharedmem_reader"
path = "src/sharedmem_reader.rs"

[[bin]]
name = "mmap"
path = "src/mmap.rs"

[[bin]]
name = "ioctl"
path = "src/ioctl.rs"

[[bin]]
name = "signal_hook"
path = "src/signal_hook.rs"

[[bin]]
name = "dbus_server"
path = "src/dbus_server.rs"

[[bin]]
name = "dbus_client"
path = "src/dbus_client.rs"

[[bin]]
name = "process"
path = "src/process.rs"

[build-dependencies]
autocxx-build = "0.30.0"
bindgen = "0.72.1"
miette = { version = "7.6.0", features = ["fancy"] }

[dependencies]
autocxx = "0.30.0"
cxx = "1.0.180"
dbus = "0.9.9"
dbus-crossroads = "0.5.2"
ipc-channel = "0.20.2"
libc = "0.2.175"
memmap = "0.7.0"
nix = { version = "0.30.1", features = ["process", "signal"] }
shared_memory = "0.12.4"
signal-hook = "0.3.18"
structopt = "0.3.26"
